Hero left section created

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,6 @@
 $main-text-color: #293340;
 $sec-text-color: #9195A0;
+$title-color: #6D7278;
 $heading-text-color: #222A41;
 $light-blue: #5F9FFE;
 $dark-blue: #2667C9;
