--- a/css/main.css
+++ b/css/main.css
@@ -531,7 +531,7 @@ img {
 }
 
 .site-header {
-  padding-top: 60px;
+  padding-top: 40px;
   background-color: rgba(242, 242, 242, 0.753);
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
@@ -544,7 +544,7 @@ img {
   -webkit-transition: all 200ms ease-in;
   transition: all 200ms ease-in;
   position: fixed;
-  padding: 20px 0;
+  padding: 10px 0;
   width: 100%;
   margin-top: 0;
 }
@@ -560,6 +560,7 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative;
+  text-transform: uppercase;
 }
 
 .site-header__logo-link {
@@ -630,7 +631,7 @@ img {
 }
 
 @media only screen and (max-width: 630px) {
-  .site-header__container {
+  .site-header {
     padding-top: 20px;
   }
   .nav-list__toggler {
@@ -674,5 +675,88 @@ img {
 
 .sticky + .site-main {
   padding-top: 100px;
+}
+
+.hero__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hero__left {
+  max-width: 540px;
+  margin: 90px 0;
+}
+
+.hero__title {
+  font-family: "Oswald";
+  font-weight: normal;
+  color: #6D7278;
+  font-size: 36px;
+  padding: 0;
+  margin: 0;
+}
+
+.hero__heading {
+  font-family: "Oswald";
+  font-weight: normal;
+  color: #222A41;
+  font-size: 70px;
+  margin: 0;
+  padding: 0;
+}
+
+.hero__text {
+  font-size: 18px;
+  color: #9195A0;
+  margin-bottom: 80px;
+}
+
+.hero__button {
+  position: relative;
+  padding: 15px;
+  background-color: #5F9FFE;
+  font-size: 18px;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-transition: all 400ms ease-in-out;
+  transition: all 400ms ease-in-out;
+}
+
+.hero__button::after {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  width: 57px;
+  background-color: #2667C9;
+  height: 100%;
+  top: 0;
+  right: -10px;
+  background-image: url(../img/icons/right-arrow-white.svg);
+  background-position: center center;
+  background-size: 35px;
+  background-repeat: no-repeat;
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+  z-index: -1;
+}
+
+.hero__button:hover::after {
+  width: 50%;
+  background-position: center center;
+  background-size: 35px;
+  top: 0;
+  right: -57px;
+}
+
+.hero__right {
+  max-width: 510px;
 }
 /*# sourceMappingURL=main.css.map */
