--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,5 +1,5 @@
 .site-header {
-  padding-top: 60px;
+  padding-top: 40px;
   background-color: rgba(242, 242, 242, 0.753);
   backdrop-filter: blur(4px);
   margin-top: 0;
@@ -8,7 +8,7 @@
 .sticky {
   transition: all 200ms ease-in;
   position: fixed;
-  padding: 20px 0;
+  padding: 10px 0;
   width: 100%;
   margin-top: 0;
 }
@@ -18,6 +18,7 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
+  text-transform: uppercase;
 }
 .site-header__logo-link {
   display: flex;
@@ -74,7 +75,7 @@
 }
 
 @include breakpoint-down(630px) {
-  .site-header__container {
+  .site-header {
     padding-top: 20px;
   }
   .nav-list__toggler {
