--- a/css/main.css
+++ b/css/main.css
@@ -684,14 +684,24 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .hero__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   max-width: 540px;
   margin: 90px 0;
+  margin-right: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
 
 .hero__title {
@@ -757,6 +767,67 @@ img {
 }
 
 .hero__right {
-  max-width: 510px;
+  display: inline-block;
+  height: 510px;
+  width: 510px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  background-image: url(../img/hero-img.png);
+  background-size: 90%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+@media only screen and (max-width: 1080px) {
+  .hero__left {
+    max-width: 440px;
+  }
+  .hero__heading {
+    font-size: 55px;
+  }
+  .hero__text {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  .hero__right {
+    width: 450px;
+    height: 450px;
+  }
+}
+
+@media only screen and (max-width: 920px) {
+  .hero__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .hero__left {
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 20px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
