--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -100,8 +100,8 @@
     line-height: 1.5;
   }
   .hero__right {
-    width: 450px;
-    height: 450px;
+    width: 400px;
+    height: 400px;
   }
 }
 @include breakpoint-down(920px) {
@@ -116,5 +116,12 @@
     text-align: center;
     align-items: center;
     margin-top: 20px;
+  }
+}
+
+@include breakpoint-down(530px) {
+  .hero__right {
+    width: 350px;
+    height: 350px;
   }
 }
